[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/DialogueChoice.gd" type="Script" id=1]

[node name="DialogueChoice" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PopupMenu" type="PopupMenu" parent="."]
anchor_right = 0.118
anchor_bottom = 0.143
margin_right = 177.168
margin_bottom = -16.8

[node name="MarginContainer" type="MarginContainer" parent="PopupMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -18.0
margin_bottom = -18.0

[node name="HBoxContainer" type="HBoxContainer" parent="PopupMenu/MarginContainer"]
margin_right = 265.0
margin_bottom = 36.0

[node name="OptionA" type="Button" parent="PopupMenu/MarginContainer/HBoxContainer"]
margin_right = 116.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Option A"

[node name="Spacer" type="MarginContainer" parent="PopupMenu/MarginContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 145.0
margin_bottom = 36.0
rect_min_size = Vector2( 25, 0 )

[node name="OptionB" type="Button" parent="PopupMenu/MarginContainer/HBoxContainer"]
margin_left = 149.0
margin_right = 265.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "OptionB"

[connection signal="pressed" from="PopupMenu/MarginContainer/HBoxContainer/OptionA" to="." method="_on_OptionA_pressed"]
[connection signal="pressed" from="PopupMenu/MarginContainer/HBoxContainer/OptionB" to="." method="_on_OptionB_pressed"]
